src/test/resources/purescript_examples/passing/StringEdgeCases.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Records')
          PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Records')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Symbols')
          PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Symbols')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PSQualifiedModuleNameImpl(QualifiedModuleName)
                        PsiElement(proper name)('Records')
                      PsiElement(.)('.')
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('main')
                        PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PSQualifiedModuleNameImpl(QualifiedModuleName)
                        PsiElement(proper name)('Symbols')
                      PsiElement(.)('.')
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('main')
                        PsiElement(whitespace)('\n')
